--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "https://github.com/saikota/TodoAngular"
   },
-  "author": "Sai Kota",
+  "author": "Sai Ram Kota",
   "engines": {
     "node": "0.12.3"
   },
